--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 		<meta charset="UTF-8">
 		<!-- Title -->
 		<!-- Add icon? -->
-		<title>Whats My Dog?</title>
+		<title>Google Stadia</title>
 		<meta name="description" content="Let a computer help you figure out what breed your dog might be!">
 		<meta name="author" content="Madeline M">
 		<!-- Styles -->
+		<!-- make this a collapsed side bar https://www.w3schools.com/howto/howto_js_collapse_sidebar.asp -->
 		<link href="style.css" rel="stylesheet" />
 		<div class="topnav">
 			<!-- Navigation -->
-			<img src="HomeLogo.png" width="280" height="50">
+			<img src="HomeLogo.png" width="100" height="60">
 			<ul>
 				<il><a class="active" href="index.html">Home</a></il>
-				<il><a href="popularDogBreeds.html">Popular</a></il>
-				<il><a href="search.html">Dog Breeds</a></il>
-				<il><a target="_blank" href="http://vision.stanford.edu/aditya86/ImageNetDogs/main.html">About</a></il>
+				<il><a href="library.html">My Games</a></il>
+				<il><a href="games.html">Search</a></il>
 			</ul>
 		  </div>
 		  <!-- make sure the body doesnt start behind the nav bar-->
@@ -29,100 +29,35 @@
 			<script type="text/javascript" src="scripts/slideshow.js"></script>
 			<!-- Load Images -->
 			<div class="mySlides fade">
-			<img src="slideshowImages/french-bulldog.png">
+			<img src="slideshowImages/Skyrim.jpeg">
 			</div>
 		
 			<div class="mySlides fade">
-			<img src="slideshowImages/bulldog.png">
+			<img src="slideshowImages/callOfDuty.jpeg">
 			</div>
 		
 			<div class="mySlides fade">
-			<img src="slideshowImages/dachshund.png">
+			<img src="slideshowImages/arcade.jpeg">
 			</div>
 
 			<div class="mySlides fade">
-			<img src="slideshowImages/beagle.png">
-			</div>
-	
-			<div class="mySlides fade">
-			<img src="slideshowImages/german-shepherd.png">
-			</div>
-			
-			<div class="mySlides fade">
-			<img src="slideshowImages/german-shorthaired-pointer.png">
-			</div>
-
-			<div class="mySlides fade">
-			<img src="slideshowImages/golden-retriever.png">
-			</div>
-			
-			<div class="mySlides fade">
-			<img src="slideshowImages/labrador-retriever.png">
-			</div>
-			
-			<div class="mySlides fade">
-			<img src="slideshowImages/poodle.png">
-			</div>
-
-			<div class="mySlides fade">
-			<img src="slideshowImages/rottweiler.png">
+			<img src="slideshowImages/AssassinsCreed.jpeg">
 			</div>
 		</div>
 		<!-- Page Content -->
 		<section class="content">
-			<!-- Logo -->
-			<img class=HomeLogo src="HomeLogo.png" width="600" height="100">
-			<br>
-			<!-- Note 1 about data set -->
-			<div class="note">
-				<p><b>Please Note:</b> not all dog breeds have been included in this program. 
-					The AI has been trained on the <href src="http://vision.stanford.edu/aditya86/ImageNetDogs/main.html" style="color: blue;">Stanford Dogs Dataset</href>
-					which contains pictures of 120 different breeds. You can find the full list of dog breeds int the search tab and more information about the data set in the About Tab. </p>
-			</div>
-			<br>
+			
 			<!-- Note 2 about what to do  -->
-			<div class="homeHeading">
-				<h2>ID Your Dog!</h2>
-				<p>The purpose of this website is to help you identify your dogs breed 
-				just from their photo. Please click the button below and upload your favorite photo:</p>
-			</div>
-			<!--upload button and show on screen -->
-			<!-- refer to: https://jsfiddle.net/sqm5puzs/ -->
-			<!-- for some reason this form keeps everything center so I cant remove it-->
-			<form method="POST" action="/image-upload" enctype="multipart/form-data">
-				<div></div>
-					<!-- show photo submitted by user -->
-					<img id="dogPhoto" width="500px" class="dogPhoto"/>
-				</div>
-			</form>
-			<!-- form to create POST request -->
-			<form method="POST" action="/dog-upload" enctype="multipart/form-data">
-				<!-- botton overlayed on top of normal upload button -->
-				<div class="uploadButton">
-					<br>
-					<label><b>Get Dog Picture</b></label>
-					<!-- normal hidden upload button -->
-					<input type="file" class="upload" name="profile-file" accept="image/*" name="dog-image" id="file"  class="upload" onchange="loadFile(event)" required/>
-				</div>
-				<!-- botton overlayed on top of normal submit button  -->
-				<div class="submitButton">
-					<label><b>Submit Photo</b></label>
-					<!-- normal hidden submit button -->
-					<input type="submit" value="Submit" class="submit" />
-				</div>
-			</form>
-			<p>
-				Tip: Its best to upload a full body photo of your dog. 
-			</p>
+			
 		</section>
 		<!-- Footer section - clean cut -->
-		<footer class="pageEnd">
+		<!--<footer class="pageEnd">
 			<a href="index.html">Home</a><br>
 			<a href="popularDogBreeds.html">Popular</a><br>
 			<a class="active" href="search.html">Dog Breeds</a><br>
 			<a target="_blank" href="http://vision.stanford.edu/aditya86/ImageNetDogs/main.html">About</a><br>
 			<a>Website By Madeline M. Fall 2023</a>
-		</footer>
+		</footer> -->
 		<!-- javascript to load and show the image a user uploads -->
 		<script>
 			var loadFile = function(event) {
