top nav changes

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 		<link href="style.css" rel="stylesheet" />
 		<div class="topnav">
 			<!-- Navigation -->
-			<img src="HomeLogo.png" width="100" height="60">
 			<ul>
-				<il><a class="active" href="index.html">Home</a></il>
-				<il><a href="library.html">My Games</a></il>
+				<il><a href="index.html"><img src="HomeLogo.png" width="80" height="50"></a></il>
+				<il><a href="library.html">Library</a></il>
 				<il><a href="games.html">Search</a></il>
+				<il><a href="profile.html"><img src="stadiaReference/Profile-3397574356.png" width="40" height="40"></a></il>
 			</ul>
 		  </div>
 		  <!-- make sure the body doesnt start behind the nav bar-->
