need to finish search function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<ul>
 				<il></il>
 				<il><a href="library.html">Library</a></il>
-				<il><a href="games.html">Search</a></il>
+				<il><a href="search.html">Search</a></il>
 				<il><a href="profile.html"><img src="stadiaReference/Profile-3397574356.png" width="40" height="40"></a></il>
 			</ul>
 		    <!-- make sure the body doesnt start behind the nav bar-->
@@ -43,7 +43,24 @@
 		<!-- Page Content -->
 		<h1>Your Library</h1>
 		<section class="content">
-			<!-- Note 2 about what to do  -->
+			<img src="gameCardImages/1.jpg" width="250" height="400">
+			<img src="gameCardImages/2.jpg" width="250" height="400">
+			<img src="gameCardImages/3.jpg" width="250" height="400">
+			<img src="gameCardImages/4.jpg" width="250" height="400">
+			<img src="gameCardImages/5.jpg" width="250" height="400">
+			<img src="gameCardImages/6.jpg" width="250" height="400">
+			<img src="gameCardImages/7.jpg" width="250" height="400">
+			<img src="gameCardImages/8.jpg" width="250" height="400">
+			<img src="gameCardImages/9.jpg" width="250" height="400">
+			<img src="gameCardImages/10.jpg" width="250" height="400">
+		</section>
+		<h1>New Games</h1>
+		<section class="content">
+			<img src="gameCardImages/6.jpg" width="250" height="400">
+			<img src="gameCardImages/7.jpg" width="250" height="400">
+			<img src="gameCardImages/8.jpg" width="250" height="400">
+			<img src="gameCardImages/9.jpg" width="250" height="400">
+			<img src="gameCardImages/10.jpg" width="250" height="400">
 			<img src="gameCardImages/1.jpg" width="250" height="400">
 			<img src="gameCardImages/2.jpg" width="250" height="400">
 			<img src="gameCardImages/3.jpg" width="250" height="400">
