search screen finalized

--- a/search.html
+++ b/search.html
@@ -13,7 +13,6 @@
 			<a href="index.html"><img src="HomeLogo.png" width="80" height="50" class="HomeLogo"></a>
 			<ul>
 				<il></il>
-				<il><a href="library.html">Library</a></il>
 				<il><a href="search.html">Search</a></il>
 				<il><a href="profile.html"><img src="stadiaReference/Profile-3397574356.png" width="40" height="40"></a></il>
 			</ul>
@@ -52,76 +51,47 @@
 			<!--one item of grid-->
 			<ul id="List">
 				<!-- list for search function -->
-				<li><a style="display:block" target="_blank" href="">
-					<p>1null</p>
-					<div class="photos">
-						<!-- image -->
+				<li><a style="display:block" target="_blank">
+					<!-- image -->
 						<img src="gameCardImages/10.jpg" width="250px" height="400px">
-					</div>
+						<p>God of War</p>
 				</a></li>
 				<!-- repeats -->
 				<li><a style="display:block" target="_blank" href="">
-					<p>2null</p>
-					<div class="photos">
-						<!-- image -->
-						<img src="gameCardImages/1.jpg" width="250px" height="400px">
-					</div>
+					<img src="gameCardImages/1.jpg" width="250px" height="400px">
+					<p>Call of Duty</p>
 				</a></li>
 				<li><a style="display:block" target="_blank" href="">
-					<p>3null</p>
-					<div class="photos">
-						<!-- image -->
-						<img src="gameCardImages/5.jpg" width="250px" height="400px">
-					</div>
+					<img src="gameCardImages/5.jpg" width="250px" height="400px">
+					<p>Doom Eternal</p>
 				</a></li>
 				<li><a style="display:block" target="_blank" href="">
-					<p>4null</p>
-					<div class="photos">
-						<!-- image -->
-						<img src="gameCardImages/2.jpg" width="250px" height="400px">
-					</div>
+					<img src="gameCardImages/2.jpg" width="250px" height="400px">
+					<p>Watch Dogs Legion</p>
 				</a></li>
 				<li><a style="display:block" target="_blank" href="">
-					<p>5null</p>
-					<div class="photos">
-						<!-- image -->
-						<img src="gameCardImages/4.jpg" width="250px" height="400px">
-					</div>
+					<img src="gameCardImages/4.jpg" width="250px" height="400px">
+					<p>The Late Night Arcade</p>
 				</a></li>
 				<li><a style="display:block" target="_blank" href="">
-					<p>6null</p>
-					<div class="photos">
-						<!-- image -->
-						<img src="gameCardImages/8.jpg" width="250px" height="400px">
-					</div>
+					<img src="gameCardImages/8.jpg" width="250px" height="400px">
+					<p>PUDG Battlegrounds</p>
 				</a></li>
 				<li><a style="display:block" target="_blank" href="">
-					<p>7null</p>
-					<div class="photos">
-						<!-- image -->
-						<img src="gameCardImages/3.jpg" width="250px" height="400px">
-					</div>
+					<img src="gameCardImages/3.jpg" width="250px" height="400px">
+					<p>Would You Kindly</p>
 				</a></li>
 				<li><a style="display:block" target="_blank" href="">
-					<p>8null</p>
-					<div class="photos">
-						<!-- image -->
-						<img src="gameCardImages/7.jpg" width="250px" height="400px">
-					</div>
+					<img src="gameCardImages/7.jpg" width="250px" height="400px">
+					<p>Video Games</p>
 				</a></li>
 				<li><a style="display:block" target="_blank" href="">
-					<p>9null</p>
-					<div class="photos">
-						<!-- image -->
-						<img src="gameCardImages/9.jpg" width="250px" height="400px">
-					</div>
+					<img src="gameCardImages/9.jpg" width="250px" height="400px">
+					<p>Gradius</p>
 				</a></li>
 				<li><a style="display:block" target="_blank" href="">
-					<p>10null</p>
-					<div class="photos">
-						<!-- image -->
-						<img src="gameCardImages/6.jpg" width="250px" height="400px">
-					</div>
+					<img src="gameCardImages/6.jpg" width="250px" height="400px">
+					<p>Valorant</p>
 				</a></li>
 		</section>
 		<script src="scripts/search.js"></script>
