--- a/search_test.html
+++ b/search_test.html
@@ -43,10 +43,12 @@
 		</div>
 		<h2>My Phonebook</h2>
 
-		<input type="text" id="myInput" onkeyup="searchFunction()" placeholder="Search for names.." title="Type in a name">
+		<input type="text" id="textSearch" onkeyup="searchFunction()" placeholder="Search for names.." title="Type in a name">
 
-		<ul id="myUL">
-  			<li><a href="#">Adele</a></li>
+		<ul id="listUL">
+  			<li><a href="#">game1</a>
+				<img src="gameCardImages/10.jpg" width="250px" height="400px">
+			</li>
   			<li><a href="#">Agnes</a></li>
 
   			<li><a href="#">Billy</a></li>
