search function fixed

--- a/search.html
+++ b/search.html
@@ -49,7 +49,7 @@
 		<section class="content">
 			<!--grid declaration-->
 			<!--one item of grid-->
-			<ul id="List">
+			<ul id="gameList">
 				<!-- list for search function -->
 				<li><a style="display:block" target="_blank">
 					<!-- image -->
