--- a/profile.html
+++ b/profile.html
@@ -28,26 +28,16 @@
             <p>Last Played: Yesterday</p>
         </section>
         <section class="settings">
-			<!-- Note 2 about what to do  -->
-			<p>Manage your plan</p>
-            <p>Edit Profile</p>
-            <p>Settings</p>
-            <p>Recover plan</p>
-            <p>Order history</p>
-            <p>Saved payments cards</p>
-            <p>Privacy</p>
+			<ul>
+				<li><p>Manage your plan</p></li>
+				<li><p>Manage your plan</p></li>
+				<li><p>Edit Profile</p></li>
+				<li><p>Settings</p></li>
+				<li><p>Recover plan</p></li>
+				<li><p>Order history</p></li>
+				<li><p>Saved payments cards</p></li>
+				<li><p>Privacy</p></li>
+			</ul>
 		</section>
-        <aside>
-
-        </aside>
-		<!-- Footer section - clean cut -->
-		<!--<footer class="pageEnd">
-			<a href="index.html">Home</a><br>
-			<a href="popularDogBreeds.html">Popular</a><br>
-			<a class="active" href="search.html">Dog Breeds</a><br>
-			<a target="_blank" href="http://vision.stanford.edu/aditya86/ImageNetDogs/main.html">About</a><br>
-			<a>Website By Madeline M. Fall 2023</a>
-		</footer> -->
-		<!-- javascript to load and show the image a user uploads -->
 	</body>
 </html>
