--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<!-- Title -->
-		<title>Profile</title>
+		<title>Google Stadia</title>
 		<meta name="author" content="Madeline M">
 		<!-- Styles -->
 		<link href="styles/home.css" rel="stylesheet" />
